--- a/README.textile
+++ b/README.textile
@@ -1,10 +1,10 @@
 h1. README
 
-*Live Website Editor*, as a lightweight yet powerful online website editor, helps you edit any website content inplace.
+With *Live Website Editor*, make persistent changes to any web page, live from the browser!
 
 h2. Install 
 
-*"INSTALL Live Website Editor":http://wiki.github.com/arnaud/lwe/bookmarklet*
+Install *"Live Website Editor for Google Chrome":TODO*
 
 h2. Features
 
@@ -12,7 +12,18 @@ h2. Features
  * -easy dragging & removing of parts of the website (soon)-
  * save the content state of the modified page, and reload it when needed
 
+h2. Architecture
+
+ Popup
+ Background
+ Content script
+
 h2. Contributors
 
  * "arnaud":http://github.com/arnaud (author)
 
+h2. Licence
+
+ * Live Website Editor is open source and is licensed under the "MIT license":http://en.wikipedia.org/wiki/MIT_License.
+ * The icons come from the "Fatcow free iconset":http://www.fatcow.com/free-icons/, which are licensed under a "Creative Commons Attribution 3.0 License":http://creativecommons.org/licenses/by/3.0/us/.
+ 
